did some more work on the portfolio section of the site in order to fix some alignment issues on smaller screens.

--- a/app/styles/media-queries.scss
+++ b/app/styles/media-queries.scss
@@ -2,6 +2,39 @@
 
 
 /**************************************************************************************************
+Navigation
+**************************************************************************************************/
+
+
+
+
+
+@media(max-width: 425px){
+
+  .navigation {
+    z-index: 0;
+    width: 0%;
+  }
+
+  .navbar a {
+    margin-left: 3%;
+  }
+
+  .mobile-nav {
+
+  }
+
+  .navigation-elements li {
+    display: none;
+  }
+
+}
+
+
+
+
+
+/**************************************************************************************************
 Heading
 **************************************************************************************************/
 
@@ -983,7 +1016,7 @@ Portfolio
   }
   .portfolio-container {
     // margin-right: 4%;
-    margin-left: 4%;
+    margin-left: 29%;
   }
   .project-container {
     width: 380px;
@@ -1023,7 +1056,7 @@ Portfolio
   }
   .portfolio-container {
     // margin-right: 4%;
-    margin-left: 7%;
+    margin-left: 12%;
   }
   .project-container {
     width: 380px;
@@ -1063,7 +1096,7 @@ Portfolio
   }
   .portfolio-container {
     // margin-right: 4%;
-    margin-left: 3.5%;
+    margin-left: 4%;
   }
   .project-container {
     width: 310px;
@@ -1075,7 +1108,7 @@ Portfolio
     width: 300px;
   }
   .project-description-one {
-    margin-left: 13%;
+    margin-left: 3%;
   }
 
   .project-two {
@@ -1084,7 +1117,7 @@ Portfolio
     width: 300px;
   }
   .project-description-two {
-    margin-left: 5%;
+    margin-left: 3%;
   }
 
   .project-three {
@@ -1103,7 +1136,7 @@ Portfolio
   }
   .portfolio-container {
     // margin-right: 4%;
-    margin-left: 4%;
+    margin-left: 28%;
   }
   .project-container {
     width: 380px;
@@ -1115,7 +1148,7 @@ Portfolio
     width: 300px;
   }
   .project-description-one {
-    margin-left: 13%;
+    margin-left: 3%;
     margin-bottom: 60px;
   }
 
@@ -1125,7 +1158,7 @@ Portfolio
     width: 300px;
   }
   .project-description-two {
-    margin-left: 5%;
+    margin-left: 3%;
     margin-bottom: 60px;
   }
 
@@ -1135,7 +1168,7 @@ Portfolio
     width: 300px;
   }
   .project-description-three {
-    margin-left: 2%;
+    margin-left: 2.5%;
 
   }
 }
@@ -1148,7 +1181,7 @@ Portfolio
   }
   .portfolio-container {
     // margin-right: 4%;
-    margin-left: 4%;
+    margin-left: 11%;
   }
   .project-container {
     width: 380px;
@@ -1160,7 +1193,7 @@ Portfolio
     width: 300px;
   }
   .project-description-one {
-    margin-left: 13%;
+    margin-left: 3%;
     margin-bottom: 60px;
   }
 
@@ -1170,7 +1203,7 @@ Portfolio
     width: 300px;
   }
   .project-description-two {
-    margin-left: 5%;
+    margin-left: 3%;
     margin-bottom: 60px;
   }
 
@@ -1180,7 +1213,51 @@ Portfolio
     width: 300px;
   }
   .project-description-three {
-    margin-left: 2%;
+    margin-left: 2.5%;
+
+  }
+}
+
+@media(max-width: 375px){
+  #portfolio {
+    height: 1510px;
+    font-size: 10px;
+  }
+  .portfolio-container {
+    // margin-right: 4%;
+    margin-left: 6%;
+  }
+  .project-container {
+    width: 380px;
+  }
+
+  .project-one {
+    // margin-left: 2.5%;
+    // // margin-right: 2.5%;
+    width: 300px;
+  }
+  .project-description-one {
+    margin-left: 3%;
+    margin-bottom: 60px;
+  }
+
+  .project-two {
+    // margin-left: 2.5%;
+    // margin-right: 2.5%;
+    width: 300px;
+  }
+  .project-description-two {
+    margin-left: 3%;
+    margin-bottom: 60px;
+  }
+
+  .project-three {
+    // margin-left: 2.5%;
+    // margin-right: 2.5%;
+    width: 300px;
+  }
+  .project-description-three {
+    margin-left: 2.5%;
 
   }
 }
